unpackaged/main/default/objects/General_Ledger_Code__c/General_Ledger_Code__c.object-meta.xml
<CustomObject>
    <description>This will hold all of the GLC for Syncing with Aspect. Is mainly to be used for finance design</description>
    <label>General Ledger Code</label>
    <nameField>
        <label>General Ledger Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>General Ledger Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>