unpackaged/main/default/objects/General_Ledger_Code__c/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <description>This is the Type of the Client the Code falls under</description>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Utility/Claims</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>