unpackaged/main/default/objects/General_Ledger_Code__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>This is the Raw GLC to be synced with Exchequer</description>
    <label>Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>