unpackaged/main/default/objects/General_Ledger_Code__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is the Specific Name of the Ledger Code</description>
    <inlineHelpText>This is the Specific Name of the Ledger Code</inlineHelpText>
    <label>Description</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>