unpackaged/main/default/objects/General_Ledger_Code__c/fields/Exchequer_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_GL_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exchequer GL Code</label>
    <referenceTo>Exchequer_General_Ledger_Code__c</referenceTo>
    <relationshipLabel>General Ledger Codes</relationshipLabel>
    <relationshipName>General_Ledger_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>