unpackaged/main/default/objects/General_Ledger_Code__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Service Contracts</fullName>
            </value>
            <value>
                <fullName>Fixed Price</fullName>
            </value>
            <value>
                <fullName>Remedial</fullName>
                <isActive>false</isActive>
                <label>Remedial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>