unpackaged/main/default/objects/General_Ledger_Code__c/fields/Ledger_Type__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Type__c</fullName>
    <description>This will be the type of Ledger that the Code falls Under</description>
    <label>Ledger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ledger_Type</valueSetName>
    </valueSet>
</CustomField>