unpackaged/main/default/objects/General_Ledger_Code__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>This is the Payment type that will be used to classify which Payment Type the Code falls under</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Type</valueSetName>
    </valueSet>
</CustomField>