unpackaged/main/default/objects/General_Ledger_Code__c/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <description>This is the Trade that the GLC falls under</description>
    <label>Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trade</valueSetName>
    </valueSet>
</CustomField>